[tool.poetry]
name = "diffusertest"
version = "0.1.0"
description = "Tests with diffuser"
authors = ["Tobias Newmiwaka <newmi1988@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.3.0"
transformers = "^4.21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
